[package]
name = "warp-range"
version = "0.1.0"
authors = ["uriegel <uriegel@hotmail.de>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

[dev-dependencies]
tokio = { version = "1.5", features = ["full"] }
tokio-util = "0.6"
tokio-stream = "0.1"
async-stream = "0.3"
hyper = "0.14"
warp = "0.3"
chrono = "0.4"
futures-util = "0.3"