[package]
name = "warp-range"
version = "0.1.0"
authors = ["uriegel <uriegel@hotmail.de>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

[dev-dependencies]
tokio = { version = "1.7", features = ["full"] }
async-stream = "0.3"
hyper = "0.14"
warp = "0.3"
chrono = "0.4"
