[package]
name = "warp-range"
version = "0.1.0"
description = "Warp filter for serving file content with range like mp3 audio or mp4 video"
authors = ["Uwe Riegel <uriegel@hotmail.de>"]
edition = "2018"
license = "MIT"
repository = "https://github.com/uriegel/warp-range"
readme = "README.md"

[dependencies]
async-stream = "0.3"
tokio = { version = "1.7", features = ["full"] }
hyper = "0.14"
warp = "0.3"

